Fix line breaks in front MOTD

--- a/kcdc3/public/static/sass/_front.sass
+++ b/kcdc3/public/static/sass/_front.sass
@@ -109,8 +109,9 @@
 #front_motd
 	margin: 0.1em 0 0 0
 	i
+		display: inline-block
 		font-style: normal
-		margin: 0 0.15em
+		margin: 0.5em 0.15em
 		padding: 0.4em 0.4em
 		color: $colorB
 		border: 1px solid $colorE1
